--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,73 +1,53 @@
 body {
-  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  font-family: 'Arial', sans-serif;
+  background-color: #f2f2f2; /* Light gray background */
+  color: #fff; /* White text */
 }
 
 header {
-  background-color: #3498db;
-  color: #fff;
   text-align: center;
-  padding: 1em;
+  padding: 20px;
+  background-color: #333; /* Dark gray header background */
 }
 
-#menu {
-  max-width: 600px;
-  margin: 20px auto;
-  opacity: 1;
-  transform: translateX(0);
-  transition: transform 0.5s ease, opacity 0.5s ease;
+#date-display {
+  margin: 0;
 }
 
-.menu-hidden {
-  opacity: 0;
-  transform: translateX(-100%);
+section#menu {
+  text-align: center;
+  padding: 20px;
+  background-color: #555; /* Dark gray section background */
 }
 
 ul {
-  list-style: none;
+  list-style-type: none;
   padding: 0;
 }
 
-li {
+ul li {
   margin-bottom: 10px;
 }
 
 .navigation {
   text-align: center;
-  margin: 20px;
+  padding: 20px;
 }
 
 button {
-  padding: 10px;
-  margin: 0 5px;
+  background-color: #4CAF50; /* Green button background */
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
   cursor: pointer;
+  margin: 5px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease; /* Smooth transition */
 }
 
-/* Dots Indicators */
-.dots {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
-}
-
-.dot {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #bbb;
-  margin: 0 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.dot.active {
-  background-color: #3498db;
-}
-
-/* Additional styles for better mobile experience */
-@media only screen and (max-width: 600px) {
-  body {
-    font-size: 16px;
-  }
+button:hover {
+  background-color: #45a049; /* Darker green on hover */
 }
